--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,18 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:usesCleartextTraffic="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainMenu">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OptionsScreen" android:label="Options screen" android:theme="@style/AppTheme" ></activity>
-        <activity android:name=".Game" android:label="Game" android:theme="@style/AppTheme" ></activity>
+        <activity android:name=".OptionsScreen" android:label="Options" android:theme="@style/AppTheme" ></activity>
+        <activity android:name=".Game" android:label="Quiz" android:theme="@style/AppTheme" ></activity>
+        <activity android:name=".Difficulty" android:label="Select your difficulty" android:theme="@style/AppTheme" ></activity>
         <service android:name=".SoundService" android:enabled="true"/>
     </application>
 
