--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -20,6 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".OptionsScreen" android:label="Options" android:theme="@style/AppTheme" ></activity>
+        <activity android:name=".ProfileScreen" android:label="Update your profile" android:theme="@style/AppTheme" ></activity>
         <activity android:name=".Game" android:label="Quiz" android:theme="@style/AppTheme" ></activity>
         <activity android:name=".Difficulty" android:label="Select your difficulty" android:theme="@style/AppTheme" ></activity>
         <service android:name=".SoundService" android:enabled="true"/>
