--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".ProfileScreen" android:label="Update your profile" android:theme="@style/AppTheme" ></activity>
         <activity android:name=".Game" android:label="Quiz" android:theme="@style/AppTheme" ></activity>
         <activity android:name=".Difficulty" android:label="Select your difficulty" android:theme="@style/AppTheme" ></activity>
+        <activity android:name=".Category" android:label="Select active categories" android:theme="@style/AppTheme" ></activity>
         <service android:name=".SoundService" android:enabled="true"/>
     </application>
 
