--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:usesCleartextTraffic="true"
@@ -22,11 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GUI.Options" android:label="Options" android:theme="@style/AppTheme" ></activity>
+        <activity android:name=".GUI.Options" android:label="Adjust your settings" android:theme="@style/AppTheme" ></activity>
         <activity android:name=".GUI.Profile" android:label="Update your profile" android:theme="@style/AppTheme" ></activity>
-        <activity android:name=".GUI.Game" android:label="Quiz" android:theme="@style/AppTheme" ></activity>
+        <activity android:name=".GUI.Game" android:label="STARWARS Card Quiz" android:theme="@style/AppTheme" ></activity>
         <activity android:name=".GUI.Difficulty" android:label="Select your difficulty" android:theme="@style/AppTheme" ></activity>
-        <activity android:name=".GUI.Category" android:label="Select active categories" android:theme="@style/AppTheme" ></activity>
+        <activity android:name=".GUI.Category" android:label="Manage active categories" android:theme="@style/AppTheme" ></activity>
         <service android:name=".Service.SoundService" android:enabled="true"/>
     </application>
 
