--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,21 +15,20 @@
         android:roundIcon="@drawable/logoicon"
         android:usesCleartextTraffic="true"
         android:supportsRtl="true"
-        android:screenOrientation="portrait"
+        android:screenOrientation="sensorPortrait"
         android:theme="@style/AppTheme">
-        <activity android:name=".GUI.MainMenu">
+        <activity android:name=".View.MainMenu">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GUI.Options" android:label="Adjust your settings" android:theme="@style/AppTheme" ></activity>
-        <activity android:name=".GUI.Profile" android:label="Update your profile" android:theme="@style/AppTheme" ></activity>
-        <activity android:name=".GUI.Game" android:label="STARWARS Card Quiz" android:theme="@style/AppTheme" ></activity>
-        <activity android:name=".GUI.Difficulty" android:label="Select your difficulty" android:theme="@style/AppTheme" ></activity>
-        <activity android:name=".GUI.Category" android:label="Manage active categories" android:theme="@style/AppTheme" ></activity>
-        <service android:name=".Service.SoundService" android:enabled="true"/>
+        <activity android:screenOrientation="portrait" android:name=".View.Options" android:label="Adjust your settings" android:theme="@style/AppTheme" />
+        <activity android:screenOrientation="portrait" android:name=".View.Profile" android:label="Update your profile" android:theme="@style/AppTheme" />
+        <activity android:screenOrientation="portrait" android:name=".View.Game" android:label="STARWARS Card Quiz" android:theme="@style/AppTheme" />
+        <activity android:screenOrientation="portrait" android:name=".View.Difficulty" android:label="Select your difficulty" android:theme="@style/AppTheme" />
+        <activity android:screenOrientation="portrait" android:name=".View.Category" android:label="Manage active categories" android:theme="@style/AppTheme" />
+        <service android:screenOrientation="portrait" android:name=".Controller.SoundService" android:enabled="true"/>
     </application>
 
 </manifest>
